force-app/main/default/objects/LiveEngage__Object_Search_Filter__c/fields/LiveEngage__Object_Mapping_Config__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Object_Mapping_Config__c</fullName>
    <description>Link to parent object</description>
    <label>Object Mapping Config</label>
    <referenceTo>LiveEngage__Object_Mapping__c</referenceTo>
    <relationshipLabel>Object Search Filters</relationshipLabel>
    <relationshipName>Object_Search_Filters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>