force-app/main/default/objects/LiveEngage__Object_Search_Filter__c/fields/LiveEngage__Operation__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Operation__c</fullName>
    <description>A list of potential operations (Equals, Not Equals, etc.)</description>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>=</fullName>
            </value>
            <value>
                <fullName>!=</fullName>
            </value>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>&lt;=</fullName>
            </value>
            <value>
                <fullName>&gt;</fullName>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
            <value>
                <fullName>LIKE</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>NOT IN</fullName>
            </value>
            <value>
                <fullName>INCLUDES</fullName>
            </value>
            <value>
                <fullName>EXCLUDES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>