force-app/main/default/objects/LiveEngage__Object_Search_Filter__c/fields/LiveEngage__Salesforce_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Salesforce_Field_Name__c</fullName>
    <description>API Name of field on the object which will be used as a filter criteria</description>
    <label>Salesforce Field Name</label>
    <length>55</length>
    <required>true</required>
    <type>Text</type>
</CustomField>