force-app/main/default/objects/LiveEngage__Object_Search_Filter__c/fields/LiveEngage__Value__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Value__c</fullName>
    <description>A static value or the typed in name of a keyword (List of acceptable keywords TBD)</description>
    <label>Value</label>
    <length>55</length>
    <type>Text</type>
</CustomField>